// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the code mirror correctly 1`] = `
<textarea
  id="code-input"
  margin="0"
  name="code-input"
  onChange={[Function]}
  value="#Your Code Here"
/>
`;

exports[`renders the question content correctly 1`] = `
<div>
  <h3
    className="ant-typography"
    style={
      Object {
        "WebkitLineClamp": null,
      }
    }
  >
    q1
  </h3>
  <div
    className="ant-space ant-space-horizontal ant-space-align-center"
    style={Object {}}
  >
    <div
      className="ant-space-item"
      style={Object {}}
    >
      <span
        className="ant-tag ant-tag-warning"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        easy
      </span>
    </div>
  </div>
  <p
    className="questionDescription"
  >
    why is the sky blue?
  </p>
</div>
`;

exports[`renders the test cases correctly 1`] = `
<div
  className="testCases"
>
  <div
    className="ant-card ant-card-bordered"
  >
    <div
      className="ant-card-body"
      style={Object {}}
    >
      <h3
        className="ant-typography"
        style={
          Object {
            "WebkitLineClamp": null,
          }
        }
      >
        Test Cases
      </h3>
      <div
        className="ant-list ant-list-lg ant-list-split ant-list-bordered"
        style={
          Object {
            "marginLeft": "-12px",
            "width": "105%",
          }
        }
      >
        <div
          className="ant-spin-nested-loading"
        >
          <div
            className="ant-spin-container"
          >
            <ul
              className="ant-list-items"
            >
              <div
                className="ant-card test-title"
              >
                <div
                  className="ant-card-head"
                  style={Object {}}
                >
                  <div
                    className="ant-card-head-wrapper"
                  >
                    <div
                      className="ant-card-head-title"
                    >
                      Test Case #1
                    </div>
                  </div>
                </div>
                <div
                  className="ant-card-body"
                  style={Object {}}
                >
                  <span
                    className="ant-tag ant-tag-success"
                    id={1}
                    style={
                      Object {
                        "backgroundColor": undefined,
                        "display": "none",
                      }
                    }
                  >
                    Passed
                  </span>
                  test 1
                </div>
              </div>
              <div
                className="ant-card test-title"
              >
                <div
                  className="ant-card-head"
                  style={Object {}}
                >
                  <div
                    className="ant-card-head-wrapper"
                  >
                    <div
                      className="ant-card-head-title"
                    >
                      Test Case #2
                    </div>
                  </div>
                </div>
                <div
                  className="ant-card-body"
                  style={Object {}}
                >
                  <span
                    className="ant-tag ant-tag-success"
                    id={2}
                    style={
                      Object {
                        "backgroundColor": undefined,
                        "display": "none",
                      }
                    }
                  >
                    Passed
                  </span>
                  test 2
                </div>
              </div>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the tutorial content correctly 1`] = `
<div>
  <h3
    className="ant-typography"
    style={
      Object {
        "WebkitLineClamp": null,
      }
    }
  >
    tut1
  </h3>
  <p
    className="questionDescription"
  >
    description
  </p>
</div>
`;
